objects/ModuleRackingJunction__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Configuration</label>
        <referenceTo>Module_Configuration__c</referenceTo>
        <relationshipLabel>ModuleRackingJunction</relationshipLabel>
        <relationshipName>ModuleRackingJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <description>this contains the name of the module</description>
        <formula>Module_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Orders Redesign - Junction field to tie a specific racking configuration and a module configuration together.</description>
        <label>Racking Configuration</label>
        <referenceTo>Racking_Configuration__c</referenceTo>
        <relationshipLabel>ModuleRackingJunction</relationshipLabel>
        <relationshipName>ModuleRackingJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racking_Name__c</fullName>
        <description>this contains the racking name</description>
        <formula>Racking_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Racking Name</label>
        <type>Text</type>
    </fields>
    <label>ModuleRackingJunction</label>
    <nameField>
        <displayFormat>MRJ-{00000}</displayFormat>
        <label>ModuleRackingJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ModuleRackingJunction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>